Add test coverage with jacoco. Use Junit 5 instead of assertj.