@@ -56,16 +56,6 @@
           </bnd>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>
-            -Xshare:off
-            --add-opens java.desktop/java.beans=ALL-UNNAMED
-          </argLine>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 
